# meroshare-cli

./: .gitignore  Cargo.toml  Dockerfile  README.md  data.json.example  users.json.copy  users.json.example
.cargo/: config
.github/workflows/: build.yml  rust.yml
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
meroshare/src/: lib.rs
meroshare/src/models/: company.rs  ipo.rs  portfolio.rs  user.rs
src/: bank.rs  company.rs  file.rs  handler.rs  ipo_result.rs  main.rs  meroshare.rs  portfolio.rs  request.rs  transaction.rs  user.rs
src/controllers/: handler.rs  meroshare.rs
src/models/: company.rs  portfolio.rs  transaction.rs  user.rs
src/utils/: request.rs
