[package]
name = "rust-ipo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.17",features = ["blocking", "json"]}
serde = "1.0.162"
tokio = { version = "1.28.1", features = ["full"] }
